--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+  <h1>Why I want to become a developer?</h1>
+	<p>that's a good question i want to become software developer since i like coding it's fun</p>
 </body>
 
 </html>
